; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_md5proto.c_md5_write.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_md5proto.c_md5_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { %struct.MD5Context* }
%struct.MD5Context = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i8*, i32)* @md5_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @md5_write(%struct.TYPE_3__* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.MD5Context*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %10 = load %struct.MD5Context*, %struct.MD5Context** %9, align 8
  store %struct.MD5Context* %10, %struct.MD5Context** %7, align 8
  %11 = load %struct.MD5Context*, %struct.MD5Context** %7, align 8
  %12 = getelementptr inbounds %struct.MD5Context, %struct.MD5Context* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i8*, i8** %5, align 8
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @av_md5_update(i32 %13, i8* %14, i32 %15)
  %17 = load i32, i32* %6, align 4
  ret i32 %17
}

declare dso_local i32 @av_md5_update(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
